--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,10 @@
     "target": "ES2020",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "types": [],
+    // "types": [],
     // For nodejs:
     // "lib": ["esnext"],
-    // "types": ["node"],
+    "types": ["node"],
     // and npm install -D @types/node
 
     // Other Outputs
